# EML-Research-POC

./: .gitignore  BIO.md  README.md  RESULTS.md  RIEMANN_REPORT.md  pyproject.toml
benchmark_results/riemann/: T1_Classical.json  T1_EML.json  T2_Classical.json  T2_EML.json  T3_Classical.json  T3_EML.json  T4_Classical.json  T4_EML.json
examples/: 01_eml_basics.py  02_hard_problems_via_sympy.py  03_riemann_zeros_on_critical_line.py  04_riemann_li_criterion.py  05_riemann_robin_criterion.py  06_riemann_pair_correlation.py  README.md
scripts/: grade_run.py  riemann_compile.py
src/eml_research/: __init__.py  agent.py  benchmark.py  cli.py  grading.py  problems.py  tools.py
src/eml_research/riemann/: README.md  __init__.py  tasks.py
tests/: test_grading.py  test_problems.py  test_tools.py
